--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,20 @@
 version: '3'
 services:
-  mysql_db:
+  # Python container
+  python:
+    build: ./python/
+    container_name: python-container
+    depends_on:
+      - mysql
+    networks:
+      - app-tier
+    stdin_open: true
+    tty: true
+  
+  #  MySQL container
+  mysql:
     build: ./mysql/
+    container_name: mysql-container
     restart: always
     environment:
       MYSQL_DATABASE: "secrets_db"
@@ -11,15 +24,6 @@ services:
       - "3306:3306"
     networks:
       - app-tier
-
-  # python_app:
-  #   build: ./pythonapp/
-  #   depends_on:
-  #     - mysql_db
-  #   networks:
-  #     - app-tier
-  #   command: 
-  #     tail -f /dev/null
 
 networks:
   app-tier:
